k8s/rabbitmq/overlays/dev/rabbitmq-install-v3.13.yaml
---
# Source: rabbitmq/templates/service-discovery.yaml
# This headless service allows communication between RabbitMQ nodes via hostname instead of IP addresses.
# The clusterIP is set to None.
# See: https://kubernetes.io/docs/concepts/services-networking/service/#headless-services
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-dev-rabbitmq-discovery
  labels:
    app.kubernetes.io/name: rabbitmq-dev
    app.kubernetes.io/component: rabbitmq-server
spec:
  ports:
  - name: clustering
    port: 25672
  - name: prometheus
    port: 15692
  - name: mqtts
    port: 8883
  - name: http
    port: 15672
  selector:
    app.kubernetes.io/name: rabbitmq-dev
    app.kubernetes.io/component: rabbitmq-server
  type: ClusterIP
  clusterIP: None
---
# Source: rabbitmq/templates/service.yaml
# This services is used to connect to the RabbitMQ using Port Forwarding
# or expose an external IP and run RabbitMQ cluster behind a LoadBalancer.
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-dev-rabbitmq-svc
  labels:
    app.kubernetes.io/name: rabbitmq-dev
    app.kubernetes.io/component: rabbitmq-server
spec:
  ports:
  - name: clustering
    port: 25672
  - name: prometheus
    port: 15692
  - name: mqtts
    port: 8883
  - name: http
    port: 15672
  selector:
    app.kubernetes.io/name: rabbitmq-dev
    app.kubernetes.io/component: rabbitmq-server
  type: ClusterIP
---
# Source: rabbitmq/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-dev-rabbitmq
  labels: &RabbitMQDeploymentLabels
    app.kubernetes.io/name: rabbitmq-dev
    app.kubernetes.io/component: rabbitmq-server
spec:
  selector:
    matchLabels: *RabbitMQDeploymentLabels
  serviceName: rabbitmq-dev-rabbitmq-discovery
  replicas: 1
  updateStrategy:
      # https://www.rabbitmq.com/upgrade.html
      # https://cloud.google.com/kubernetes-engine/docs/how-to/updating-apps
      type: RollingUpdate
  template:
    metadata:
      labels: *RabbitMQDeploymentLabels
    spec:
      serviceAccountName: rabbitmq-dev-serviceaccount
      terminationGracePeriodSeconds: 180
      containers:
      - name: rabbitmq
        image: "gcr.io/cloud-marketplace/google/rabbitmq:3.13"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: clustering
          containerPort: 25672
        - name: amqp
          containerPort: 5672
        - name: amqp-ssl
          containerPort: 5671
        - name: prometheus
          containerPort: 15692
        - name: http
          containerPort: 15672
        volumeMounts:
        - name: config
          mountPath: /etc/rabbitmq
        - name: rabbitmq-dev-rabbitmq-pvc
          mountPath: /var/lib/rabbitmq
        - name: mqtts-certs
          mountPath: /etc/rabbitmq/certs
          readOnly: true
        - name: root-ca
          mountPath: /etc/rabbitmq/ca
          readOnly: true
        livenessProbe:
          exec:
            command:
            - /opt/rabbitmq/sbin/rabbitmq-diagnostics
            - -q
            - ping
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - /opt/rabbitmq/sbin/rabbitmq-diagnostics
            - -q
            - ping
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 20
        startupProbe:
          exec:
            command:
            - /opt/rabbitmq/sbin/rabbitmq-diagnostics
            - -q
            - ping
          timeoutSeconds: 10
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 180
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/bash
              - -c
              - |
                # Wait for the RabbitMQ to be ready.
                until rabbitmqctl node_health_check; do
                  sleep 5
                done

                # By default, RabbitMQ does not have Highly Available policies enabled,
                # using the following command to enable it.
                rabbitmqctl set_policy ha-all "." '{"ha-mode":"all", "ha-sync-mode":"automatic"}' --apply-to all --priority 0
      
      volumes:
      - name: configmap
        configMap:
          name: rabbitmq-dev-rabbitmq-config
          items:
          - key: rabbitmq.conf
            path: rabbitmq.conf
          - key: enabled_plugins
            path: enabled_plugins
      - name: mqtts-certs
        secret:
          secretName: rabbitmq-dev-mqtt-cert-secret
      - name: root-ca
        configMap:
          name: rabbitmq-dev-ca
          items:
            - key: ca.crt
              path: ca.crt
      - name: config
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: rabbitmq-dev-rabbitmq-pvc
      labels: *RabbitMQDeploymentLabels
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: standard
      resources:
        requests:
          storage: 5Gi
